Fixed a weird behavior of the moon on mobile

--- a/src/components/Background.scss
+++ b/src/components/Background.scss
@@ -25,6 +25,11 @@
     background: $secondary;
     box-shadow: 0 0 2vw 0 $secondary;
     filter: blur(5px);
+
+    @include media("<desktop") {
+        top: auto;
+        bottom: 65svh;
+    }
 }
 
 .mountain {
